2004-10-21  Sebastien Bacher  <seb128@debian.org>

	* capplets/default-applications/gnome-default-applications-properti
	es-structs.c:
	* capplets/file-types/service-info.c:
	* control-center/control-center-categories.c:
	(load_information_to_information):
	* control-center/control-center.c: (gnome_cc_about):
	Changed the "Gnome" occurences to "GNOME" (Closes: #152085).

2004-10-17  Paolo Borelli  <pborelli@katamail.com>

	* capplets/common/activate-settings-daemon.c: fix leak, patch by
	Kjartan Maaras. (#153595)

2004-10-17  Sergey V. Udaltsov <svu@gnome.org>

	* configure.in : require libxklavier 1.10 - since API was changed

2004-10-15  Jody Goldberg <jody@gnome.org>

	* configure.in : bump the xklavier version dep.  I hope 1.04 is
	  sufficient, rather than cvs head.

2004-10-14  Jody Goldberg <jody@gnome.org>

	* configure.in : post release bump

2004-10-14  Jody Goldberg <jody@gnome.org>

	* Release 2.8.1

2004-10-08  Christophe Fergeau  <teuf@gnome.org>

	* gnome-settings-daemon/actions/Makefile.am: switch ALSA_LIBS and 
	  GST_LIBS order in libacme_la_LIBADD, fixes some libtool link
	  issues on Debian.

Tue Sep 14 17:50:56 2004  Jonathan Blandford  <jrb@redhat.com>

	* configure.in:
	* NEWS: Release 2.8.0

2004-09-03  Jody Goldberg <jody@gnome.org>

	* gnome-settings-daemon/gnome-settings-keyboard-xkb.c : revert
	  unintended string change

2004-08-31  Jody Goldberg <jody@gnome.org>

	* capplets/common/gconf-property-editor.c
	(peditor_numeric_range_widget_changed) : tracked the long running
	  irrtation about 'expecting int received float'.  Running without a
	  schema would default the value to float.  12 of 13 callers had ints
	  so I have changed the default and added a warning.

Sun Aug 29 22:37:00 2004  Jonathan Blandford  <jrb@gnome.org>

	* configure.in: post release bump.

Sun Aug 29 21:55:09 2004  Jonathan Blandford  <jrb@gnome.org>

	* NEWS: Release 2.7.1

2004-07-23  Jody Goldberg <jody@gnome.org>
