@@ -1,3 +1,10 @@
+2004-11-01  Jeff Waugh  <jdub@perkypants.org>
+
+	* po/POTFILES.in, vfs-methods/fontilus/Makefile.am,
+	  vfs-methods/fontilus/gnome-font-viewer.desktop.in,
+	  vfs-methods/fontilus/.cvsignore: Add a .desktop file for the
+	  font viewer, need it for the MIME loving. D'oh!
+
 2004-10-21  Sebastien Bacher  <seb128@debian.org>
 
 	* capplets/default-applications/gnome-default-applications-properti
